--- a/GaussianProcesses.html
+++ b/GaussianProcesses.html
@@ -91,11 +91,6 @@
 				<br/>
 				In my time at Cambridge we have studied such models extensively in the modules <i>'Probabilistic Machine Learning'</i> and <i>'Computational Statistics and Machine Learning'</i>
 			</p>
-			<p>
-				<a href="#" class="btnghost"><i class="fa fa-envelope"></i> Request similar project</a> 
-				<i style="font-size:12px;margin-right:3px;"> or </i> 
-				<a href="index.html#portfolio" class="btnghost"><i class="fa fa-camera"></i> Back to projects gallery</a>
-			</p>
 		</div>
 	</div>
 </div>
@@ -104,7 +99,7 @@
 <footer>
 <div class="container text-center">
 	<p class="credits">
-		Copyright &copy; Your Website 2015<br/>
+		Copyright &copy; 2022<br/>
 		"Aries" Template by WowThemes.net
 	</p>
 </div>
