--- a/Sentiment Analysis.html
+++ b/Sentiment Analysis.html
@@ -106,7 +106,7 @@
 <footer>
 <div class="container text-center">
 	<p class="credits">
-		Copyright &copy; Your Website 2015<br/>
+		Copyright &copy; 2022<br/>
 		"Aries" Template by WowThemes.net
 	</p>
 </div>
