--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 		</a>
 		</li>
 		<li class="col-md-3">
-		<a href="portfolio-item.html">
-		<img src="http://unsplash.it/680/380?random=3" alt="">
+		<a href="Speech Processing.html">
+		<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
 		</a>
 		</li>
 		<li class="col-md-3">
