--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		</a>
 		</li>
 		<li class="col-md-3">
-		<a href="Speech Processing.html">
+		<a href="Speech Recognition.html">
 		<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
 		</a>
 		</li>
