speech graph size

--- a/GaussianProcesses.html
+++ b/GaussianProcesses.html
@@ -83,7 +83,7 @@
 		<h2>STEPS OF PROJECT</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<div id="e274e586-2463-4697-9fa1-6731413af43b" class="plotly-graph-div" style="height:100%; width:100%;">                   </div>
-			<script src="gp_chart.js"></script>
+			<script src="code/gp_chart.js"></script>
 			<p>
 				<br/>
 				A Gaussian process is a statistical model with similar descriptive power as a neural network. <br/>
