--- a/Speech Recognition.html
+++ b/Speech Recognition.html
@@ -83,7 +83,7 @@
 		<h2>STEPS OF PROJECT</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 
-			<div id="a4bcc7ec-761f-4246-8759-cf045a610512" class="plotly-graph-div" style="height:900px; width:900px;"></div>
+			<div style="display:flex;" id="a4bcc7ec-761f-4246-8759-cf045a610512"></div>
 			<script src="code/speech_code.js"></script>
 			<p>
 				<br/>
