--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 <div class="gallery">
 	<ul>
 		<li class="col-md-3">
+		<a href="Undergraduate Dissertation.html">
+		<img src="img/KCL diss.png" alt="" style="aspect-ratio: 65/36">
+		</a>
+		</li>
+		<li class="col-md-3">
 		<a href="GaussianProcesses.html">
 		<img src="img/gp_cover.png" alt="" style="aspect-ratio: 65/36">
 		</a>
@@ -105,11 +110,6 @@
 		<li class="col-md-3">
 		<a href="Speech Recognition.html">
 		<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
-		</a>
-		</li>
-		<li class="col-md-3">
-		<a class="image" href="portfolio-item.html">
-		<img src="http://unsplash.it/680/380?random=4" alt="">
 		</a>
 		</li>
 		<li class="col-md-3">
