princess & ML update

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<h2>ABOUT ME</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<p>
-				Seeking to transform our ability to understand and model the real world. <br/>
+				Seeking to improve our ability to understand and model the real world. <br/>
 				Attending Cambridge University, studying Machine learning. Graduated from King's College with a 1st in Computer Science with AI. 2 years of experience as a data scientist at Princess Yachts Limited.
 			</p>
 			<p>
@@ -123,8 +123,8 @@
 		</a>
 		</li>
 		<li class="col-md-3">
-		<a href="portfolio-item.html">
-		<img src="http://unsplash.it/680/380?random=7" alt="">
+		<a href="Princess Yachts.html">
+		<img src="img/Princess-Yachts-Logo.jpg" alt="" style="aspect-ratio: 65/36">
 		</a>
 		</li>
 		<li class="col-md-3">
