--- a/Princess Yachts.html
+++ b/Princess Yachts.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>ML Library</title>
+<title>Princess Yachts</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -64,9 +64,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Machine Learning Library</h1>
+				<h1 class="brand-heading">Princess Yachts</h1>
 				<p class="intro-text">
-					A personal school project
+					First workplace experience - Data Scientist
 				</p>
 				<a href="#single-project" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -80,28 +80,14 @@
 <section id="single-project">
 <div class="container content-section text-center">
 	<div class="row">
+		<h2>Abstract</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			
-			<div style="display: flex; align-items: center;">
-				<div style="flex: 33.33%;padding: 5px;">
-				  <img src="img/ML Lib tests.png" alt="Snow" style="width:100%">
-				</div>
-				<div style="flex: 66.66%;padding: 5px;">
-				  <img src="img/ML Lib tests.jpeg" alt="Forest" style="width:100%">
-				</div>
-			</div>
 			<p>
 				<br/>
-				A personal project from high school aimed to understand CUDA kernels and Neural Networks.
+				In 2021 I joined the Princess Yachts team, where I led the development of forecasting models for the entire fleet of over a thousand yachts in warranty across the globe. I also conducted an investigation into the causal factors of costs using a time series model based on GRU's.
 				<br/>
-				This is implemented in C++ and features a Matrix library supporting both CPU and GPU operations. This library was then used as a backend for training multi layer perceptron networks. As well as Convolutional Neural Networks (At a later date)
 				<br/>
-				This library was then used in my first dissertation on the "Detection of Parkinson's within mouse data"
-			</p>
-			<p>
-				<p>
-					<a href="https://github.com/William-Baker/MLib" class="btnghost"><i class="fa fa-github"></i>Code</a>
-				</p>
+				This opportunity allowed me to interact directly with the directors of the business, including Mr Antony Sheriff, the former CEO of Mclaren. I have learnt countless lessons from my time at Princess, most notably a strong, independent work ethic and an ability to think laterally across a business, beyond the scope of a single Python project.
 			</p>
 		</div>
 	</div>
