--- a/Mathwall.html
+++ b/Mathwall.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>ML Library</title>
+<title>Mathwall</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -64,9 +64,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Machine Learning Library</h1>
+				<h1 class="brand-heading">Mathwall</h1>
 				<p class="intro-text">
-					A personal school project
+					Contracted project
 				</p>
 				<a href="#single-project" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -81,28 +81,15 @@
 <div class="container content-section text-center">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
+	
+			<img src="img/Mathwall.jpeg" alt="">
 			
-			<div style="display: flex; align-items: center;">
-				<div style="flex: 33.33%;padding: 5px;">
-				  <img src="img/ML Lib tests.png" style="width:100%">
-				</div>
-				<div style="flex: 66.66%;padding: 5px;">
-				  <img src="img/ML Lib tests.jpeg" style="width:100%">
-				</div>
-			</div>
 			<p>
-				<br/>
-				A personal project from high school aimed to understand CUDA kernels and Neural Networks.
-				<br/>
-				This is implemented in C++ and features a Matrix library supporting both CPU and GPU operations. This library was then used as a backend for training multi layer perceptron networks. As well as Convolutional Neural Networks (At a later date)
-				<br/>
-				This library was then used in my first dissertation on the "Detection of Parkinson's within mouse data"
+				Alongside my <a href="School Dissertation.html"><u>school dissertation</u></a> and A-levels I helped Mathwall Ltd (an engine development company) develop a control system that gathered data from pressure, temperature and RPM sensors to actuate an engine control flap in the hopes of improving engine efficiency during start-up.
+					</BR> </BR> 
+				This entailed running a web server on a microcontroller as well as developing appropriate graphing and control scripts in JavaScript as well as interfacing with a number of sensors and a H-bridge motor driver.
 			</p>
-			<p>
-				<p>
-					<a href="https://github.com/William-Baker/MLib" class="btnghost"><i class="fa fa-github"></i>Code</a>
-				</p>
-			</p>
+			
 		</div>
 	</div>
 </div>
