--- a/School Dissertation.html
+++ b/School Dissertation.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>ML Library</title>
+<title></title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -64,9 +64,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Machine Learning Library</h1>
+				<h1 class="brand-heading">School Dissertation</h1>
 				<p class="intro-text">
-					A personal school project
+					At Godalming College
 				</p>
 				<a href="#single-project" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -82,27 +82,13 @@
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
 			
-			<div style="display: flex; align-items: center;">
-				<div style="flex: 33.33%;padding: 5px;">
-				  <img src="img/ML Lib tests.png" style="width:100%">
-				</div>
-				<div style="flex: 66.66%;padding: 5px;">
-				  <img src="img/ML Lib tests.jpeg" style="width:100%">
-				</div>
-			</div>
 			<p>
 				<br/>
-				A personal project from high school aimed to understand CUDA kernels and Neural Networks.
-				<br/>
-				This is implemented in C++ and features a Matrix library supporting both CPU and GPU operations. This library was then used as a backend for training multi layer perceptron networks. As well as Convolutional Neural Networks (At a later date)
-				<br/>
-				This library was then used in my first dissertation on the "Detection of Parkinson's within mouse data"
+				This project combined most of my first explorations into computer science, such as a real time C++ graphing library built with SFML, an implementation of the fast Fourier transform, as well as my <a href="ML Library.html"><u>C++ Machine Learning library</u></a>.
+				<br/><br/>
+				The project was inspired by a family friend that contracted Parkinson's in an effort to help diagnose early onset Parkinson's sooner where it's impact can be mitigated more effectively.
 			</p>
-			<p>
-				<p>
-					<a href="https://github.com/William-Baker/MLib" class="btnghost"><i class="fa fa-github"></i>Code</a>
-				</p>
-			</p>
+			<a href="Detection of Parkinsons.pdf" class="btnghost"><i class="fa fa-download"></i>Download the Report</a>
 		</div>
 	</div>
 </div>
