--- a/index.html
+++ b/index.html
@@ -98,60 +98,54 @@
 		</a>
 		</li>
 		<li class="col-md-3">
-		<a href="GaussianProcesses.html">
-		<img src="img/gp_cover.png" alt="" style="aspect-ratio: 65/36">
-		</a>
+			<a href="Princess Yachts.html">
+			<img src="img/Princess-Yachts-Logo.jpg" alt="" style="aspect-ratio: 65/36">
+			</a>
 		</li>
 		<li class="col-md-3">
-		<a href="Sentiment Analysis.html">
-		<img src="img/MLMI13 cover.png" alt="" style="aspect-ratio: 65/36">
-		</a>
+			<a href="Sentiment Analysis.html">
+			<img src="img/MLMI13 cover.png" alt="" style="aspect-ratio: 65/36">
+			</a>
 		</li>
 		<li class="col-md-3">
-		<a href="Speech Recognition.html">
-		<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
-		</a>
+			<a href="GaussianProcesses.html">
+			<img src="img/gp_cover.png" alt="" style="aspect-ratio: 65/36">
+			</a>
 		</li>
 		<li class="col-md-3">
-		<a href="Data Visualisation.html">
-		<img src="img/MSDV.png" alt="" style="aspect-ratio: 65/36">
-		</a>
+			<a href="ML Library.html">
+			<img src="img/ML Lib.png" alt="" style="aspect-ratio: 65/36">
+			</a>
 		</li>
 		<li class="col-md-3">
-		<a href="ML Library.html">
-		<img src="img/ML Lib.png" alt="" style="aspect-ratio: 65/36">
-		</a>
+			<a href="Data Visualisation.html">
+			<img src="img/MSDV.png" alt="" style="aspect-ratio: 65/36">
+			</a>
 		</li>
 		<li class="col-md-3">
-		<a href="Princess Yachts.html">
-		<img src="img/Princess-Yachts-Logo.jpg" alt="" style="aspect-ratio: 65/36">
-		</a>
+			<a href="Speech Recognition.html">
+			<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
+			</a>
 		</li>
+		
+		
+		
 		<li class="col-md-3">
-		<a href="portfolio-item.html">
-		<img src="http://unsplash.it/680/380?random=8" alt="">
+		<a href="Drone.html">
+		<img src="img/Drone Cad.png" alt="" style="aspect-ratio: 65/36">
 		</a>
 		</li>
 				<li class="col-md-3">
-		<a href="portfolio-item.html">
-		<img src="http://unsplash.it/680/380?random=10" alt="">
+		<a href="School Dissertation.html">
+		<img src="img/School Dissertation.png" alt="">
 		</a>
 		</li>
 		<li class="col-md-3">
-		<a href="portfolio-item.html">
-		<img src="http://unsplash.it/680/380?random=11" alt="">
+		<a href="Mathwall.html">
+		<img src="img/Mathwall.jpeg" alt="">
 		</a>
 		</li>
-		<li class="col-md-3">
-		<a href="portfolio-item.html">
-		<img src="http://unsplash.it/680/380?random=12" alt="">
-		</a>
-		</li>
-		<li class="col-md-3">
-		<a href="portfolio-item.html">
-		<img src="http://unsplash.it/680/380?random=13" alt="">
-		</a>
-		</li>
+		
 	</ul>
 </div>
 </section>
