--- a/Drone.html
+++ b/Drone.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>ML Library</title>
+<title>Drone</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -64,9 +64,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Machine Learning Library</h1>
+				<h1 class="brand-heading">Custom Drone</h1>
 				<p class="intro-text">
-					A personal school project
+					Personal Project
 				</p>
 				<a href="#single-project" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -81,27 +81,34 @@
 <div class="container content-section text-center">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
-			
+			<div style="position:relative;padding-top:50%;">
+				<iframe src="img/Drone Test.mp4" frameborder="0" allowfullscreen
+					style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"></iframe>
+			</div>
+			<img src="img/Drone Cad.png" alt="">
 			<div style="display: flex; align-items: center;">
 				<div style="flex: 33.33%;padding: 5px;">
-				  <img src="img/ML Lib tests.png" style="width:100%">
+				  <img src="img/Drone Finished.jpg" style="width:100%">
 				</div>
-				<div style="flex: 66.66%;padding: 5px;">
-				  <img src="img/ML Lib tests.jpeg" style="width:100%">
+				<div style="flex: 33.33%;padding: 5px;">
+				  <img src="img/Drone Code.png" style="width:100%">
 				</div>
+				<div style="flex: 33.33%;padding: 5px;">
+					<img src="img/Drone Remote.jpg" style="width:100%">
+				  </div>
 			</div>
 			<p>
 				<br/>
-				A personal project from high school aimed to understand CUDA kernels and Neural Networks.
+				I started building a drone as a Gold DofE project to develop my engineering skills during school. Since then I developed multiple versions of this drone starting with a fully custom 3D printed frame, using an arduino flight controller running a few PID loops to control the roll, pitch and yaw. The transmitter I built for this version used a single WiFi transeiver featuring high data speeds but poor signal strength. When this version away from me after loosing connection and crashed, I began an improved version using carbon fiber spars.
 				<br/>
-				This is implemented in C++ and features a Matrix library supporting both CPU and GPU operations. This library was then used as a backend for training multi layer perceptron networks. As well as Convolutional Neural Networks (At a later date)
 				<br/>
-				This library was then used in my first dissertation on the "Detection of Parkinson's within mouse data"
+				The latest version of my drone used a commercial flight controller but kept the custom transeiver, to which I added a long range transeiver in addition to the old WiFi module to boost signal integrity. Overall the drone could lift a 2kg load with a flight time of 30 minutes thanks to the cutom Li-ion battery bank and carbon fibre frame.
 			</p>
+			<img src="img/Drone First.png" style="width:100%">
 			<p>
-				<p>
-					<a href="https://github.com/William-Baker/MLib" class="btnghost"><i class="fa fa-github"></i>Code</a>
-				</p>
+
+				
+				
 			</p>
 		</div>
 	</div>
