--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
 <div class="gallery">
 	<ul>
 		<li class="col-md-3">
+		<a href="Cambridge.html">
+		<img src="img/Cambridge.png" alt="" style="aspect-ratio: 65/36">
+		</a>
+		</li>
+		<li class="col-md-3">
+			<a href="Kings.html">
+			<img src="img/Kings.png" alt="" style="aspect-ratio: 65/36">
+			</a>
+		</li>
+		<li class="col-md-3">
 		<a href="Undergraduate Dissertation.html">
 		<img src="img/KCL diss.png" alt="" style="aspect-ratio: 65/36">
 		</a>
