Style sheet fixes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <link href="css/theme.css" rel="stylesheet">
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -94,12 +94,12 @@
 	<ul>
 		<li class="col-md-3">
 		<a href="Cambridge.html">
-		<img src="img/Cambridge.png" alt="" style="aspect-ratio: 65/36">
+		<img src="img/Cambridge White.png" alt="" style="aspect-ratio: 65/36">
 		</a>
 		</li>
 		<li class="col-md-3">
 			<a href="Kings.html">
-			<img src="img/Kings.png" alt="" style="aspect-ratio: 65/36">
+			<img src="img/Kings white.png" alt="" style="aspect-ratio: 65/36">
 			</a>
 		</li>
 		<li class="col-md-3">
