--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
 			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="portfolio-item.html">Single Project</a>
+			<a href="Cambridge.html">Cambridge</a>
 			</li>
 			<li>
-			<a href="page-sample.html">Page Sample</a>
+			<a href="Kings.html">Kings</a>
 			</li>
 			<li>
-			<a href="contact.html">Hire me</a>
+			<a href="Undergraduate Dissertation.html">Dissertation</a>
 			</li>
+			<li>
+				<a href="William Baker CV.pdf">CV</a>
+			</li>
+			
 		</ul>
 	</div>
 	<!-- /.navbar-collapse -->
@@ -83,7 +87,7 @@
 				Attending Cambridge University, studying Machine learning. Graduated from King's College with a 1st in Computer Science with AI. 2 years of experience as a data scientist at Princess Yachts Limited.
 			</p>
 			<p>
-				<a href="#" class="btnghost"><i class="fa fa-download"></i> Curriculum Vitae</a>
+				<a href="William Baker CV.pdf" class="btnghost"><i class="fa fa-download"></i>Curriculum Vitae</a>
 			</p>
 		</div>
 	</div>
