--- a/page-sample.html
+++ b/page-sample.html
@@ -40,15 +40,17 @@
 			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="portfolio-item.html">Singe Project</a>
+			<a href="Cambridge.html">Cambridge</a>
 			</li>
 			<li>
-			<a href="page-sample.html">Page Sample</a>
+			<a href="Kings.html">Kings</a>
 			</li>
 			<li>
-			<a href="contact.html">Hire me</a>
+			<a href="Undergraduate Dissertation.html">Dissertation</a>
 			</li>
-		</ul>
+			<li>
+			<a href="William Baker CV.pdf">CV</a>
+			</li>
 	</div>
 	<!-- /.navbar-collapse -->
 </div>
