--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
 			<h2>Get in touch</h2>
-			<!-- <p>
-				<i><a href="mailto:wnbaker@outlook.com" style="border-bottom:1px dashed #ccc;">wnbaker@outlook.com</a></i>
-			</p> -->
+			<p>
+				<i><p style="border-bottom:1px dashed #ccc;">willliam-baker-enquiries@outlook.com</p></i>
+			</p>
 
-			<img src="img/email.png" alt="" class="scale">
+			<!-- <img src="img/email.png" alt="" class="scale"> -->
 			<!-- <ul class="list-inline banner-social-buttons">
 				<li>
 				<a href="https://twitter.com/wowthemesnet" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
