--- a/index.html
+++ b/index.html
@@ -94,51 +94,88 @@
 </div>
 </section>
 <section id="portfolio">
+
 <div class="gallery">
 	<ul>
 		<li class="col-md-3">
 		<a href="Cambridge.html">
 		<img src="img/Cambridge White.png" alt="" style="aspect-ratio: 65/36">
+		<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h1>Cambridge</h1>
+		</div>
 		</a>
 		</li>
 		<li class="col-md-3">
 			<a href="Kings.html">
 			<img src="img/Kings white.png" alt="" style="aspect-ratio: 65/36">
+			<div class="dark-overlay"></div>
+			<div class="innerText">
+				<h1>King's</h1>
+			</div>
 			</a>
 		</li>
 		<li class="col-md-3">
 		<a href="Undergraduate Dissertation.html">
 		<img src="img/KCL diss.png" alt="" style="aspect-ratio: 65/36">
+		<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>Undergraduate Dissertation</h2>
+		</div>
 		</a>
 		</li>
 		<li class="col-md-3">
 			<a href="Princess Yachts.html">
 			<img src="img/Princess-Yachts-Logo.jpg" alt="" style="aspect-ratio: 65/36">
+			<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>Princess Yachts</h2>
+		</div>
 			</a>
 		</li>
 		<li class="col-md-3">
 			<a href="Sentiment Analysis.html">
 			<img src="img/MLMI13 cover.png" alt="" style="aspect-ratio: 65/36">
+			<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>Sentiment Analysis</h2>
+		</div>
 			</a>
 		</li>
 		<li class="col-md-3">
 			<a href="GaussianProcesses.html">
 			<img src="img/gp_cover.png" alt="" style="aspect-ratio: 65/36">
+			<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>Gaussian Processes</h2>
+		</div>
 			</a>
 		</li>
 		<li class="col-md-3">
 			<a href="ML Library.html">
 			<img src="img/ML Lib.png" alt="" style="aspect-ratio: 65/36">
+			<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>Machine Learning Library</h2>
+		</div>
 			</a>
 		</li>
 		<li class="col-md-3">
 			<a href="Data Visualisation.html">
 			<img src="img/MSDV.png" alt="" style="aspect-ratio: 65/36">
+			<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>Data Visualisation</h2>
+		</div>
 			</a>
 		</li>
 		<li class="col-md-3">
 			<a href="Speech Recognition.html">
 			<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
+			<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>Speech Recognition</h2>
+		</div>
 			</a>
 		</li>
 		
@@ -147,16 +184,28 @@
 		<li class="col-md-3">
 		<a href="Drone.html">
 		<img src="img/Drone Cad.png" alt="" style="aspect-ratio: 65/36">
+		<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h1>Drone</h1>
+		</div>
 		</a>
 		</li>
 				<li class="col-md-3">
 		<a href="School Dissertation.html">
 		<img src="img/School Dissertation.png" alt="">
+		<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>School Dissertation</h2>
+		</div>
 		</a>
 		</li>
 		<li class="col-md-3">
 		<a href="Mathwall.html">
 		<img src="img/Mathwall.jpeg" alt="">
+		<div class="dark-overlay"></div>
+		<div class="innerText">
+			<h2>Mathwall Ltd</h2>
+		</div>
 		</a>
 		</li>
 		
