--- a/Cambridge.html
+++ b/Cambridge.html
@@ -62,7 +62,7 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro">
+<header class="alt-intro">
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
@@ -71,9 +71,6 @@
 				<p class="intro-text">
 					Machine Learning and Machine Intelligence Masters
 				</p>
-				<a href="#single-project" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
-				</a>
 			</div>
 		</div>
 	</div>
