--- a/School Dissertation.html
+++ b/School Dissertation.html
@@ -61,7 +61,7 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro">
+<header class="alt-intro">
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
@@ -70,9 +70,7 @@
 				<p class="intro-text">
 					At Godalming College
 				</p>
-				<a href="#single-project" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
-				</a>
+				
 			</div>
 		</div>
 	</div>
