--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro">
+<header class="alt-intro">
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
