--- a/page-sample.html
+++ b/page-sample.html
@@ -57,7 +57,7 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro">
+<header class="alt-intro">
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
