--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -58,7 +58,7 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro">
+<header class="alt-intro">
 <div class="intro-body">
 	<div class="container">
 		<div class="row">
@@ -67,9 +67,7 @@
 				<p class="intro-text">
 					Buildings, Parks, Gardens
 				</p>
-				<a href="#single-project" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
-				</a>
+				
 			</div>
 		</div>
 	</div>
