--- a/Cambridge.html
+++ b/Cambridge.html
@@ -85,12 +85,9 @@
 			<img src="img/Cam Class.jpg" alt="">
 			<p>
 				<br/>
-				I'm currently studying at Cambridge University for my Masters degree in Machine Learning and Machine Intelligence. It's been an amazing experience so far allowing me to discuss state of the art models and methods with world renowned professors. The Computational Statistics module by Mark Girolami was particularly 
+				I'm currently studying at Cambridge University for my Masters degree in Machine Learning and Machine Intelligence. It's been an amazing experience so far allowing me to discuss state of the art models and methods with world renowned professors. The Computational Statistics module by Mark Girolami was particularly enlightening, presenting 
 				<br/>
-				First a lexicographical approach was used, using a dictionary of positive and negative words to score a sentence. This exposed a bias towards positive language present in the dataset (shown above).
-				Then unigram, bigram and trigram approaches were tested, which consider the likelihood of a word or a combination of words appearing in a positive or negative review.
-				Finally document embeddings were used, a Doc2Vec model was trained on the dataset as well as pre-trained BERT and DistilBERT implementations being tested.
-				Overall Doc2Vec provided the best results, although the BERT/DistilBERT architectures would likely perform better if they were trained for this specific task.
+				
 			</p>
 		</div>
 	</div>
