Cam & King's finishing

--- a/Cambridge.html
+++ b/Cambridge.html
@@ -85,10 +85,13 @@
 			<img src="img/Cam Class.jpg" alt="">
 			<p>
 				<br/>
-				I'm currently studying at Cambridge University for my Masters degree in Machine Learning and Machine Intelligence. It's been an amazing experience so far allowing me to discuss state of the art models and methods with world renowned professors. The Computational Statistics module by Mark Girolami was particularly enlightening, presenting 
-				<br/>
-				
+				I'm currently studying at Cambridge University for my Masters degree in Machine Learning and Machine Intelligence. It's been an amazing experience so far allowing me to discuss state of the art models and methods with world renowned professors. The Computational Statistics module from Mark Girolami was particularly enlightening, presenting deep dives into measure theory,  vector/function spaces and Monte-Carlo sampling techniques. 
+				<br/><br/>
+				My classmates have been most the invaluable part of the course so far, broadening my horizons far more than any course ever could.
+				<br/><br/>
+				In June I will be starting my biggest dissertation yet, which will likely encompass Neural processes. As they have deeply intrigued me in a smaller research project that I am currently embarking on as a group project.
 			</p>
+			
 		</div>
 	</div>
 </div>
