--- a/Kings.html
+++ b/Kings.html
@@ -66,9 +66,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Sentiment Analysis</h1>
+				<h1 class="brand-heading">King's College London</h1>
 				<p class="intro-text">
-					from Cambridge University studies
+					Computer Science with Intelligent Systems
 				</p>
 				
 			</div>
@@ -81,20 +81,12 @@
 <div class="container content-section text-center">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
-			
-			<img src="img/MLMI13 cover.png" alt="">
 			<p>
-				<br/>
-				Sentiment analysis aims to quantify the emotion within a text. In this project various sentiment analysis tools are compared for the purpose of classifying movie reviews.
-				<br/>
-				First a lexicographical approach was used, using a dictionary of positive and negative words to score a sentence. This exposed a bias towards positive language present in the dataset (shown above).
-				Then unigram, bigram and trigram approaches were tested, which consider the likelihood of a word or a combination of words appearing in a positive or negative review.
-				Finally document embeddings were used, a Doc2Vec model was trained on the dataset as well as pre-trained BERT and DistilBERT implementations being tested.
-				Overall Doc2Vec provided the best results, although the BERT/DistilBERT architectures would likely perform better if they were trained for this specific task.
+			After graduating from school with A*A*A*A in Computer Science, Physics, Maths and Further Maths I began my further studies of computer science at King's where I began to specialise further in Machine Learning, such as my final year dissertation in <a href="Undergraduate Dissertation.html"><u>Argumentation Mining from Twitter using Transformer models</u></a>. During my 3 years of studies I also took special interest in robotics, data visualisation and signal processing. Overall I graduated with a first having attained an average of 80.4% across 21 modules.
+			<br/><br/>
+			During my time at King's I was also a committee member of the Ice Skating society which arranged a trip to Stockholm, Sweden to learn Nordic Skating! I recommend giving it a try!
 			</p>
-			<p>
-				<a href="Sentiment_Detection_of_Reviews.pdf" class="btnghost"><i class="fa fa-download"></i>Download the Report</a>
-			</p>
+			<img src="img/Nordic skating.jpg" alt="">
 		</div>
 	</div>
 </div>
