--- a/Cambridge.html
+++ b/Cambridge.html
@@ -90,6 +90,17 @@
 				My classmates have been most the invaluable part of the course so far, broadening my horizons far more than any course ever could.
 				<br/><br/>
 				In June I will be starting my biggest dissertation yet, which will likely encompass Neural processes. As they have deeply intrigued me in a smaller research project that I am currently embarking on as a group project.
+				<br/><br/>
+			</p>
+			<hr style="width:50%", size="3", color=#36454F></hr>
+			<p>
+				<br/><br/>
+				I'm also enjoying being a member of the Churchill College rowing club alongside my studies:
+				<div style="position:relative;padding-top:50%;">
+					<iframe src="img/Cam Rowing.mp4" frameborder="0" allowfullscreen
+					  style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+				  </div>
+				
 			</p>
 			
 		</div>
