--- a/Cambridge.html
+++ b/Cambridge.html
@@ -97,7 +97,7 @@
 				<br/><br/>
 				I'm also enjoying being a member of the Churchill College rowing club alongside my studies:
 				<div style="position:relative;padding-top:50%;">
-					<iframe src="img/Cam Rowing.mp4" frameborder="0" allowfullscreen
+					<iframe src="img/Cam Rowing.mp4" frameborder="0" autoplay="0" allowfullscreen
 					  style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
 				  </div>
 				
