--- a/Data Visualisation.html
+++ b/Data Visualisation.html
@@ -84,7 +84,7 @@
 			
 			<!-- <iframe  src="MSDV.mp4" width="700px" height="400px"></iframe> -->
 			<div style="position:relative;padding-top:75%;">
-				<iframe src="MSDV.mp4" frameborder="0" allowfullscreen
+				<iframe src="MSDV.mp4" frameborder="0" autoplay="0" allowfullscreen
 				  style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
 			  </div>
 			<p>
