--- a/Drone.html
+++ b/Drone.html
@@ -82,7 +82,7 @@
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
 			<div style="position:relative;padding-top:50%;">
-				<iframe src="img/Drone Test.mp4" frameborder="0" allowfullscreen
+				<iframe src="img/Drone Test.mp4" frameborder="0" autoplay="0" allowfullscreen
 					style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"></iframe>
 			</div>
 			<img src="img/Drone Cad.png" alt="">
