--- a/Data Visualisation.html
+++ b/Data Visualisation.html
@@ -95,7 +95,7 @@
 			</p>
 			<p>
 				<p>
-					<a href="MSDV Demo.html" class="btnghost"><i class="fa fa-html5"></i>Interactive Demo</a>
+					<a href="MSDV Demo.html" class="btnghost"><i class="fa fa-html5"></i>Interactive Demo (PC)</a>
 				</p>
 			</p>
 		</div>
