--- a/index.html
+++ b/index.html
@@ -1,230 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>William Baker|Machine Learning Specialist</title>
-<!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<!-- Custom CSS -->
-<link href="css/theme.css" rel="stylesheet">
-<!-- Custom Fonts -->
-<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<title>William Baker|Machine Learning Specialist</title>
+	<!-- Bootstrap Core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Custom CSS -->
+	<link href="css/theme.css" rel="stylesheet">
+	<!-- Custom Fonts -->
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet"
+		type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-<!-- Navigation -->
-<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-<div class="container">
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-		<i class="fa fa-bars"></i>
-		</button>
-		<a class="navbar-brand page-scroll" href="index.html">
-			William Baker </a>
-	</div>
-	<!-- Collect the nav links, forms, and other content for toggling -->
-	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-		<ul class="nav navbar-nav">
-			<li>
-			<a href="index.html">Home</a>
-			</li>
-			<li>
-			<a href="Cambridge.html">Cambridge</a>
-			</li>
-			<li>
-			<a href="Kings.html">Kings</a>
-			</li>
-			<li>
-			<a href="Undergraduate Dissertation.html">Dissertation</a>
-			</li>
-			<li>
-				<a href="William Baker CV.pdf">CV</a>
-			</li>
-			
-		</ul>
-	</div>
-	<!-- /.navbar-collapse -->
-</div>
-<!-- /.container -->
-</nav>
-<!-- Intro Header -->
-<header class="intro">
-<div class="intro-body">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">William Baker</h1>
-				<p class="intro-text">
-					Machine Learning Specialist
-				</p>
-				<a href="#about" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
-				</a>
+	<!-- Navigation -->
+	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+					<i class="fa fa-bars"></i>
+				</button>
+				<a class="navbar-brand page-scroll" href="index.html">
+					William Baker </a>
 			</div>
-		</div>
-	</div>
-</div>
-</header>
-<!-- About Section -->
-<section id="about">
-<div class="container content-section text-center">
-	<div class="row">
-		<h2>ABOUT ME</h2>
-		<div class="col-lg-8 col-lg-offset-2">
-			<p>
-				Seeking to improve our ability to understand and model the real world. <br/>
-				Attending Cambridge University, studying Machine learning. Graduated from King's College with a 1st in Computer Science with AI. 2 years of experience as a data scientist at Princess Yachts Limited.
-			</p>
-			<p>
-				<a href="William Baker CV.pdf" class="btnghost"><i class="fa fa-download"></i>Curriculum Vitae</a>
-			</p>
-		</div>
-	</div>
-</div>
-</section>
-<section id="portfolio">
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+				<ul class="nav navbar-nav">
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li>
+						<a href="Cambridge.html">Cambridge</a>
+					</li>
+					<li>
+						<a href="Kings.html">Kings</a>
+					</li>
+					<li>
+						<a href="Undergraduate Dissertation.html">Dissertation</a>
+					</li>
+					<li>
+						<a href="William Baker CV.pdf">CV</a>
+					</li>
 
-<div class="gallery">
-	<ul>
-		<li class="col-md-4">
-		<a href="Cambridge.html">
-		<img src="img/Cambridge White.png" alt="" style="aspect-ratio: 65/36">
-		<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h1>Cambridge</h1>
-		</div>
-		</a>
-		</li>
-		<li class="col-md-4">
-			<a href="Kings.html">
-			<img src="img/Kings white.png" alt="" style="aspect-ratio: 65/36">
-			<div class="dark-overlay"></div>
-			<div class="innerText">
-				<h1>King's</h1>
+				</ul>
 			</div>
-			</a>
-		</li>
-		<li class="col-md-4">
-			<a href="Princess Yachts.html">
-			<img src="img/Princess-Yachts-Logo.jpg" alt="" style="aspect-ratio: 65/36">
-			<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>Princess Yachts</h2>
+			<!-- /.navbar-collapse -->
 		</div>
-			</a>
-		</li>
-		<li class="col-md-4">
-		<a href="Undergraduate Dissertation.html">
-		<img src="img/KCL diss.png" alt="" style="aspect-ratio: 65/36">
-		<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>Undergraduate Dissertation</h2>
+		<!-- /.container -->
+	</nav>
+	<!-- Intro Header -->
+	<header class="intro">
+		<div class="intro-body">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<h1 class="brand-heading">William Baker</h1>
+						<p class="intro-text">
+							Machine Learning Specialist
+						</p>
+						<a href="#about" class="btn btn-circle page-scroll">
+							<i class="fa fa-angle-double-down animated"></i>
+						</a>
+					</div>
+				</div>
+			</div>
 		</div>
-		</a>
-		</li>
-		<li class="col-md-4">
-			<a href="Data Visualisation.html">
-			<img src="img/MSDV.png" alt="" style="aspect-ratio: 65/36">
-			<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>Data Visualisation</h2>
+	</header>
+	<!-- About Section -->
+	<section id="about">
+		<div class="container content-section text-center">
+			<div class="row">
+				<h2>ABOUT ME</h2>
+				<div class="col-lg-8 col-lg-offset-2">
+					<p>
+						Seeking to improve our ability to understand and model the real world. <br />
+						Attending Cambridge University, studying Machine learning. Graduated from King's College with a
+						1st in Computer Science with AI. 2 years of experience as a data scientist at Princess Yachts
+						Limited.
+					</p>
+					<p>
+						<a href="William Baker CV.pdf" class="btnghost"><i class="fa fa-download"></i>Curriculum
+							Vitae</a>
+					</p>
+				</div>
+			</div>
 		</div>
-			</a>
-		</li>
-		
-		<li class="col-md-4">
-			<a href="GaussianProcesses.html">
-			<img src="img/gp_cover.png" alt="" style="aspect-ratio: 65/36">
-			<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>Gaussian Processes</h2>
-		</div>
-			</a>
-		</li>
-		<li class="col-md-4">
-			<a href="ML Library.html">
-			<img src="img/ML Lib.png" alt="" style="aspect-ratio: 65/36">
-			<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>Machine Learning Library</h2>
-		</div>
-			</a>
-		</li>
-		<li class="col-md-4">
-			<a href="Sentiment Analysis.html">
-			<img src="img/MLMI13 cover.png" alt="" style="aspect-ratio: 65/36">
-			<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>Sentiment Analysis</h2>
-		</div>
-			</a>
-		</li>
-		<li class="col-md-4">
-			<a href="Speech Recognition.html">
-			<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
-			<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>Speech Recognition</h2>
-		</div>
-			</a>
-		</li>
-		
-		
-		
-		<li class="col-md-4">
-		<a href="Drone.html">
-		<img src="img/Drone Cad.png" alt="" style="aspect-ratio: 65/36">
-		<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h1>Drone</h1>
-		</div>
-		</a>
-		</li>
+	</section>
+	<section id="portfolio">
+
+		<div class="gallery">
+			<ul>
 				<li class="col-md-4">
-		<a href="School Dissertation.html">
-		<img src="img/School Dissertation.png" alt="">
-		<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>School Dissertation</h2>
-		</div>
-		</a>
-		</li>
-		<li class="col-md-4">
-		<a href="Mathwall.html">
-		<img src="img/Mathwall.jpeg" alt="">
-		<div class="dark-overlay"></div>
-		<div class="innerText">
-			<h2>Mathwall Ltd</h2>
-		</div>
-		</a>
-		</li>
-		
-	</ul>
-</div>
-</section>
-<!-- Contact Section -->
-<section id="contact">
-<div class="container content-section text-center">
-	<div class="row">
-		<div class="col-lg-8 col-lg-offset-2">
-			<h2>Get in touch</h2>
-			<p>
-				<i><p style="border-bottom:1px dashed #ccc;">willliam-baker-enquiries@outlook.com</p></i>
-			</p>
+					<a href="Cambridge.html">
+						<img src="img/Cambridge White.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h1>Cambridge</h1>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="Kings.html">
+						<img src="img/Kings white.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h1>King's</h1>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="Princess Yachts.html">
+						<img src="img/Princess-Yachts-Logo.jpg" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>Princess Yachts</h2>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="Undergraduate Dissertation.html">
+						<img src="img/KCL diss.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>Undergraduate Dissertation</h2>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="Data Visualisation.html">
+						<img src="img/MSDV.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>Data Visualisation</h2>
+						</div>
+					</a>
+				</li>
 
-			<!-- <img src="img/email.png" alt="" class="scale"> -->
-			<!-- <ul class="list-inline banner-social-buttons">
+				<li class="col-md-4">
+					<a href="GaussianProcesses.html">
+						<img src="img/gp_cover.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>Gaussian Processes</h2>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="ML Library.html">
+						<img src="img/ML Lib.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>Machine Learning Library</h2>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="Sentiment Analysis.html">
+						<img src="img/MLMI13 cover.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>Sentiment Analysis</h2>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="Speech Recognition.html">
+						<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>Speech Recognition</h2>
+						</div>
+					</a>
+				</li>
+
+
+
+				<li class="col-md-4">
+					<a href="Drone.html">
+						<img src="img/Drone Cad.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h1>Drone</h1>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="School Dissertation.html">
+						<img src="img/School Dissertation.png" alt="">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>School Dissertation</h2>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="Mathwall.html">
+						<img src="img/Mathwall.jpeg" alt="">
+						<div class="dark-overlay"></div>
+						<div class="tile-border mobile-only"></div>
+						<div class="innerText">
+							<h2>Mathwall Ltd</h2>
+						</div>
+					</a>
+				</li>
+
+			</ul>
+		</div>
+	</section>
+	<!-- Contact Section -->
+	<section id="contact">
+		<div class="container content-section text-center">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+					<h2>Get in touch</h2>
+					<p>
+						<i>
+							<p style="border-bottom:1px dashed #ccc;">willliam-baker-enquiries@outlook.com</p>
+						</i>
+					</p>
+
+					<!-- <img src="img/email.png" alt="" class="scale"> -->
+					<!-- <ul class="list-inline banner-social-buttons">
 				<li>
 				<a href="https://twitter.com/wowthemesnet" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
 				</li>
@@ -235,26 +255,27 @@
 				<a href="https://plus.google.com/u/0/b/110916582192388695332/110916582192388695332/posts" class="btn btnghost btn-lg"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">Google+</span></a>
 				</li>
 			</ul> -->
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
-</section>
-<!-- Footer -->
-<footer>
-<div class="container text-center">
-	<p class="credits">
-		Copyright &copy; 2022<br/>
-		"Aries" Template by WowThemes.net
-	</p>
-</div>
-</footer>
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
-<!-- Custom Theme JavaScript -->
-<script src="js/theme.js"></script>
+	</section>
+	<!-- Footer -->
+	<footer>
+		<div class="container text-center">
+			<p class="credits">
+				Copyright &copy; 2022<br />
+				"Aries" Template by WowThemes.net
+			</p>
+		</div>
+	</footer>
+	<!-- jQuery -->
+	<script src="js/jquery.js"></script>
+	<!-- Bootstrap Core JavaScript -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Plugin JavaScript -->
+	<script src="js/jquery.easing.min.js"></script>
+	<!-- Custom Theme JavaScript -->
+	<script src="js/theme.js"></script>
 </body>
+
 </html>
