--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 						1st in Computer Science with AI. 2 years of experience as a data scientist at Princess Yachts
 						Limited.
 					</p>
+					
 					<p>
 						<a href="William Baker CV.pdf" class="btnghost"><i class="fa fa-download"></i>Curriculum
 							Vitae</a>
@@ -99,6 +100,7 @@
 			</div>
 		</div>
 	</section>
+	
 	<section id="portfolio">
 
 		<div class="gallery">
@@ -107,7 +109,7 @@
 					<a href="Cambridge.html">
 						<img src="img/Cambridge White.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h1>Cambridge</h1>
 						</div>
@@ -117,7 +119,7 @@
 					<a href="Kings.html">
 						<img src="img/Kings white.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h1>King's</h1>
 						</div>
@@ -127,7 +129,7 @@
 					<a href="Princess Yachts.html">
 						<img src="img/Princess-Yachts-Logo.jpg" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>Princess Yachts</h2>
 						</div>
@@ -137,7 +139,7 @@
 					<a href="Undergraduate Dissertation.html">
 						<img src="img/KCL diss.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>Undergraduate Dissertation</h2>
 						</div>
@@ -147,7 +149,7 @@
 					<a href="Data Visualisation.html">
 						<img src="img/MSDV.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>Data Visualisation</h2>
 						</div>
@@ -158,7 +160,7 @@
 					<a href="GaussianProcesses.html">
 						<img src="img/gp_cover.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>Gaussian Processes</h2>
 						</div>
@@ -168,7 +170,7 @@
 					<a href="ML Library.html">
 						<img src="img/ML Lib.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>Machine Learning Library</h2>
 						</div>
@@ -178,7 +180,7 @@
 					<a href="Sentiment Analysis.html">
 						<img src="img/MLMI13 cover.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>Sentiment Analysis</h2>
 						</div>
@@ -188,7 +190,7 @@
 					<a href="Speech Recognition.html">
 						<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>Speech Recognition</h2>
 						</div>
@@ -201,7 +203,7 @@
 					<a href="Drone.html">
 						<img src="img/Drone Cad.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h1>Drone</h1>
 						</div>
@@ -211,7 +213,7 @@
 					<a href="School Dissertation.html">
 						<img src="img/School Dissertation.png" alt="">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>School Dissertation</h2>
 						</div>
@@ -221,7 +223,7 @@
 					<a href="Mathwall.html">
 						<img src="img/Mathwall.jpeg" alt="">
 						<div class="dark-overlay"></div>
-						<div class="tile-border mobile-only"></div>
+						<img class="mobile-only" src="assets/circle-arrow-right-solid.svg" width="50px" height="50px" style="position:absolute; right:30px; bottom:30px; "/>
 						<div class="innerText">
 							<h2>Mathwall Ltd</h2>
 						</div>
