added computer vision

--- a/index.html
+++ b/index.html
@@ -177,6 +177,16 @@
 					</a>
 				</li>
 				<li class="col-md-4">
+					<a href="Computer Vision.html">
+						<img src="img/computer vision.png" alt="" style="aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
+						<div class="innerText">
+							<h2>Computer Vision</h2>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
 					<a href="Sentiment Analysis.html">
 						<img src="img/MLMI13 cover.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
