video frames + CV abstract

--- a/Data Visualisation.html
+++ b/Data Visualisation.html
@@ -83,10 +83,9 @@
 		<div class="col-lg-8 col-lg-offset-2">
 			
 			<!-- <iframe  src="MSDV.mp4" width="700px" height="400px"></iframe> -->
-			<div style="position:relative;padding-top:75%;">
-				<iframe src="MSDV.mp4" frameborder="0" autoplay="0" allowfullscreen
-				  style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
-			  </div>
+			<video controls style="width:70%;height:100%;">
+				<source src="img/MSDV.mp4" type="video/mp4">
+			</video>
 			<p>
 				<br/>
 				My Simulation and Data Visualsation module at King's taught me the key principles behind an effective visualisation of data.
