--- a/Cambridge.html
+++ b/Cambridge.html
@@ -96,13 +96,10 @@
 			<p>
 				<br/><br/>
 				I'm also enjoying being a member of the Churchill College rowing club alongside my studies:
-				<div style="position:relative;padding-top:50%;">
-					<iframe src="img/Cam Rowing.mp4" frameborder="0" autoplay="0" allowfullscreen
-					  style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
-				  </div>
-				
 			</p>
-			
+			<video controls style="width:100%;height:100%;">
+				<source src="img/Cam Rowing.mp4" type="video/mp4">
+			</video>
 		</div>
 	</div>
 </div>
