--- a/Drone.html
+++ b/Drone.html
@@ -81,10 +81,9 @@
 <div class="container content-section text-center">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
-			<div style="position:relative;padding-top:50%;">
-				<iframe src="img/Drone Test.mp4" frameborder="0" autoplay="0" allowfullscreen
-					style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"></iframe>
-			</div>
+			<video controls style="width:100%;height:100%;">
+				<source src="img/Drone Test.mp4" type="video/mp4">
+			</video>
 			<img src="img/Drone Cad.png" alt="">
 			<div style="display: flex; align-items: center;">
 				<div style="flex: 33.33%;padding: 5px;">
