Aspect Ratios + CV

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="School Dissertation.html">
-						<img src="img/School Dissertation.png" alt="">
+						<img src="img/School Dissertation.png" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -231,7 +231,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Mathwall.html">
-						<img src="img/Mathwall.jpeg" alt="">
+						<img src="img/Mathwall.jpeg" alt="" style="aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
